--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
     </div>
 
     <script>
-        const ACCESS_CODE = typeof process !== 'undefined' && process.env ? process.env.ACCESS_CODE : 'demo123';
+        const ACCESS_CODE = typeof process !== 'undefined' && process.env ? process.env.ACCESS_CODE : '';
         
         let selectedFile = null;
         let scripts = [];
